tui-markdown/src/renderer/snapshots/tui_markdown__renderer__footnote__tests__footnotes__definition_style_does_not_leak_into_following_paragraph.snap
---
source: tui-markdown/src/renderer/footnote.rs
expression: |-
  from_str(indoc!
  {"
                      Text[^one]
  
                      [^one]: First paragraph.
  
                          Second paragraph.
  
                      After.
                  "})
---
Text::from_iter([
    Line::from_iter([
        Span::from("Text"),
        Span::from("[one]").dim().italic(),
    ]),
    Line::default(),
    Line::from_iter([
        Span::from("[one]: ").dim(),
        Span::from("First paragraph."),
    ]).dim(),
    Line::default().dim(),
    Line::from("Second paragraph.").dim(),
    Line::default(),
    Line::from("After."),
])
